# cryptomentor-bot

./: .env.automaton.example  .env.example  .env.tracking.example  .gitignore  .railwayignore  .replit  =1.0.0  ADMIN_AUTOMATON_CREDITS_GUIDE.md  ADMIN_BYPASS_IMPLEMENTED.md  ADMIN_OPENCLAW_BYPASS.md  ADMIN_OPENCLAW_CREDITS_GUIDE.md  ADMIN_OPENCLAW_QUICK_GUIDE.md  ADMIN_QUICK_REFERENCE.md  ADMIN_READY_TO_DEPLOY.md  ADMIN_UNLIMITED_CREDITS.md  ADMIN_UNLIMITED_SUMMARY.md  AI_AGENT_BUTTONS_FIX_COMPLETE.md  AI_AGENT_MENU_ACCESS_FIX.md  AI_MODEL_COMPARISON.md  AI_REENABLED_CEREBRAS.md  ANALYTICS_SETUP.md  ARCHITECTURE_EXPLAINED_FOR_USERS.md  AUDIT_OPENCLAW_SYSTEM.md  AUDIT_REPORT.md  AUTOMATON_502_ERROR_FIX.md  AUTOMATON_ACCESS_FEE_COMPLETE.md  AUTOMATON_AI_FAQ.md  AUTOMATON_AI_FLOW_DIAGRAM.md  AUTOMATON_AI_INTEGRATION_GUIDE.md  AUTOMATON_AI_QUICK_REF.md  AUTOMATON_AI_SUMMARY.md  AUTOMATON_API_FIX_COMPLETE.md  AUTOMATON_ARCHITECTURE_UPDATE.md  AUTOMATON_CLIENT_UPGRADE_PLAN.md  AUTOMATON_COMPLETE_INDEX.md  AUTOMATON_DEPLOYMENT_CHECKLIST.md  AUTOMATON_DEPLOYMENT_ISSUE.md  AUTOMATON_DEPLOY_CHECKLIST.md  AUTOMATON_FEE_STRATEGY.md  AUTOMATON_FINAL_SUMMARY.md  (+716 more)
.claude/: risk-slider-implementation.md  settings.local.json  unified-sparking-cherny.md
Bismillah/: .env.example  admin_agent.py  ai_assistant.py  analytics_api.py  analytics_dashboard.html  auto_backup.py  binance_fallback.py  bot.py  check_api_health.py  check_api_status.py  check_connection_status.py  check_database_health.py  check_deployment_apis.py  check_deployment_realtime.py  check_premium_recovery.py  check_users.py  (+75 more)
(+2687 files in other folders)
