[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "psutil>=7.0.0",
    "python-dateutil>=2.9.0.post0",
    "supabase>=2.18.0",
    "python-telegram-bot[job-queue]>=21.0",
    "h3>=4.4.1",
    "python-dotenv>=1.2.1",
]
